Alteração no codigo

--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,9 @@ a:active {
     }
 
     button {
-        margin-left: 150px;
+        margin-bottom: 40px;
+        margin-left: 135px;
+        
     }
 
     .retangulo {
